8214816: os::read() should not transition to _thread_blocked with safepoint check on Solaris

Reviewed-by: jiangli, mgronlun