src/hotspot/share/runtime/os.inline.hpp
@@ -27,6 +27,10 @@
 
 #include "runtime/os.hpp"
 
+inline ssize_t os::read(int fd, void *buf, unsigned int nBytes) {
+  return ::read(fd, buf, nBytes);
+}
+
 #include OS_HEADER_INLINE(os)
 
 #endif // SHARE_RUNTIME_OS_INLINE_HPP
